# wasm-registry

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: tests.yml
examples/: schema.rs
schema/: cosm_registry.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_export_chain_json.json  response_to_get_chain.json  response_to_get_chains.json  response_to_get_endpoints.json  response_to_get_owner.json  response_to_get_params.json  response_to_get_value.json
scripts/: build.sh  deploy.sh  schema.sh
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
tests/: integration.rs
