[package]
name = "cosm_registry"
version = "0.1.0"
authors = ["Cosmos registry Team"]
edition = "2021"
description = "CosmWasm contract scaffold for Cosmos ecosystem"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-schema = "2.3.3"
cosmwasm-std = "2.2.9"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
cw-multi-test = "2.5.1"
